
=== New features

* Add support for freeform and defined tags for instances, vnics and block volumes (Fix #10, #11, #12, #13, #18, #20)
* Add "module watermark" freeform tags: module defined and user defined freeform tags are merged on the final resource
* Add support to provide the `ssh_authorized_keys` argument as a string or as a file (Fix #67 #70)

=== Documentation

* Add add instructions on how to provide one or more public ssh keys using string, variable or file.

== 2.1.0 - 2021-03-02

=== New features

* support Flex instance shape (Issue #42)
* new output : instances_summary

=== Changes

* New examples for both Flex Instances and Fixed Shape Instances
* Documentation is now formatted with AsciiDoc

=== Fixes

* Outputs produces unnecessarily multidimensional objects (Issue #31)
* Repo maintenance:
** add .gitattributes for consistent line ending and tab
** add pre-commit configuration file

== 2.0.4 - 2021-02-13

=== Changes

* Terraform block now defines minimum terraform version and required providers. Block Moved to main.tf
* block volumes attachment type is now paravirtualized by default
* boot volume size default value is now passed by the service
* README content is automatically generated for the following sections: Requirements, Providers, Inputs, Outputs

=== Fixes

* Issue #41 - When regional subnets are used, the instance fails to detect the availability domain
** Instance Domain selection do not rely on vnic AD anymore: use Data Source + a list local
** add `var.ad_number`, `data.oci_identity_availability_domains.ad`, `local.ADs`
* Sample code in the main README is now compliant with Terraform 0.12 syntax
* Documentation enhancement:
** CHANGELOG format
** Missing description, type or default value for variables module inputs

== 2.0.3 - 2021-01-31

=== Changes

* Upgrade to HCL2, for compatibility with Terraform 0.12 or higher

== 2.0.2 - 2021-01-22

=== Changes

* CONTRIBUTING.md - contributor's guide

== 2.0.1 - 2019-05-08

=== Changes
