@@ -1,6 +1,6 @@
 # Oracle Cloud Infrastructure Terraform Module for Compute Instance
 
-This Module provides an easy way to launch compute instances with advanced settings and good practices embedded.
+This module provides an easy way to launch compute instances with advanced settings and good practices embedded.
 
 On top of the compute instance capabilities, this module can also provision and attach additional Block Volumes to the instances.
 
@@ -10,24 +10,20 @@ On top of the compute instance capabilities, this module can also provision and 
 >
 > Oracle recommends that you do not use custom images without these rules unless you understand the security risks. See [Compute Best Practices](https://docs.cloud.oracle.com/iaas/Content/Compute/References/bestpracticescompute.htm#two) for recommendations on how to manage instances.
 
-## Maintainers
-
-This module is maintained by Oracle.
-
 ## Requirements
 
 The diagram below summarizes the required components and their respective versions to use this module.
 
 ![versions](https://github.com/oracle-terraform-modules/terraform-oci-compute-instance/blob/main/docs/diagrams/versions.svg?raw=true&sanitize=true)
 
-To enforce versions compatibility of both Terraform and the OCI provider, your root configuration should ideally include this block in `main.tf` for version pinning:
+To enforce versions compatibility of both Terraform and the OCI provider, your root configuration should ideally include this block for version pinning:
 
 ```HCL
 terraform {
-  required_version = ">= 0.12"
+  required_version = ">= 0.12.6"
   required_providers {
     oci = {
-      version = ">= 3.27"
+      version = ">= 4.0.0"
     }
   }
 }
@@ -59,11 +55,11 @@ module "instance" {
 
 ## What's coming next for this module?
 
-The current focus is to get back in close the gap between this module and the provider's capabilities. We started with a complete code base update for [HCL2 syntax compatibility](https://github.com/oracle-terraform-modules/terraform-oci-compute-instance/releases/tag/v2.0.2), then adding support for [Regional Subnets](https://github.com/oracle-terraform-modules/terraform-oci-compute-instance/releases/tag/v2.0.4) and now [Flexible Shapes](https://github.com/oracle-terraform-modules/terraform-oci-compute-instance/pull/49).
+The current focus is to close the gap between this module and the provider's capabilities. We started with a complete codebase update for [HCL2 syntax compatibility](https://github.com/oracle-terraform-modules/terraform-oci-compute-instance/releases/tag/v2.0.2), then adding support for [Regional Subnets](https://github.com/oracle-terraform-modules/terraform-oci-compute-instance/releases/tag/v2.0.4) and lastly [Flexible Shapes](https://github.com/oracle-terraform-modules/terraform-oci-compute-instance/pull/49).
 
 We will continue to push in that direction with the goal of [feature parity with the provider's capabilities](https://github.com/oracle-terraform-modules/terraform-oci-compute-instance/projects/4), as well as adding more features and integration points with other OCI services: Block Volume Backups, Secondary VNICs and IPs, etc ...
 
-Compute Instances are also a perfect place to illustrate [module composition principles](https://www.terraform.io/docs/language/modules/develop/composition.html) reusing the other existing official Terraform OCI Modules
+Given the dependency to Network and Storage for Compute Instances,it is a perfect place to illustrate [module composition principles](https://www.terraform.io/docs/language/modules/develop/composition.html) and how to reuse the other official Terraform OCI modules.
 
 ## Configuring iSCSI volume attachments
 
@@ -73,7 +69,8 @@ Compute Instances are also a perfect place to illustrate [module composition pri
 
 ## Contributing
 
-This project is open source. Oracle appreciates any contributions that are made by the open source community: raising issues, improving documentation, fixing bugs, or adding new features.
+This project is open source and maintained by Oracle.  
+Oracle appreciates any contributions that are made by the open source community: raising issues, improving documentation, fixing bugs, or adding new features.
 
 Learn how to [contribute](https://github.com/oracle-terraform-modules/terraform-oci-compute-instance/blob/main/CONTRIBUTING.adoc).
 
