@@ -1,10 +1,10 @@
 // Copyright (c) 2018, 2021 Oracle and/or its affiliates.
 
 terraform {
-  required_version = ">= 0.12" // terraform version below 0.12 is not tested/supported with this module
+  required_version = ">= 0.13" // terraform version below 0.12 is not tested/supported with this module
   required_providers {
     oci = {
-      version = ">= 3.27" // force downloading oci-provider compatible with terraform v0.12
+      version = ">= 4.0.0" // force downloading oci-provider compatible with terraform v0.12
     }
   }
 }
