@@ -25,6 +25,9 @@ Given a version number MAJOR.MINOR.PATCH:
 * Add support for freeform and defined tags for instances, vnics and block volumes (Fix #10, #11, #12, #13, #18, #20)
 * Add "module watermark" freeform tags: module defined and user defined freeform tags are merged on the final resource
 * Add support to provide the `ssh_authorized_keys` argument as a string or as a file (Fix #67 #70)
+* Provision instances with reserved Public IP
+* [ ] Define a backup policy for boot volume and additional block volumes
+* Add new outputs for each provisioned resources: "all_attributes" outputs have full provider coverage and are auto-updating.
 
 === Documentation
 
@@ -47,7 +50,6 @@ Given a version number MAJOR.MINOR.PATCH:
 * Outputs produces unnecessarily multidimensional objects (Issue #31)
 * Repo maintenance:
 ** add .gitattributes for consistent line ending and tab
-** add pre-commit configuration file
 
 == 2.0.4 - 2021-02-13
 
